--- a/templates/debug-pod.yaml
+++ b/templates/debug-pod.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: debug-container
+  name: debug
 spec:
   # serviceAccountName: service-account-name
   restartPolicy: Never
   containers:
-    - name: debug-container
-      image: "madguru/debug-container:latest"
+    - name: debug
+      image: "stvasyl/debug-container:latest"
       imagePullPolicy: Always
       command:
         - /bin/sleep
